refactor(backend): clean up how roles and authorities are used